# Ax-Shell

./: .gitignore  .pre-commit-config.yaml  FABRIC_TROUBLESHOOTING.md  README.md  install.sh  main.css  main.py  mypy.ini  pyproject.toml  run_shell.sh  service1.py  uninstall.sh  version.json  widgets1.py
assets/: emoji.json
config/: config.json  config.py  data.py  settings_constants.py  settings_gui.py  settings_utils.py
config/hypr/: hypridle.conf  hyprland.conf  restart_shell.sh
config/hypr/custom/: my-overrides.conf
modules/: ai.py  ai_services.py  bar.py  bluetooth.py  buttons.py  calendar.py  cgmsugar.py  controls.py  corners.py  dashboard.py  deskwidgets.py  dock.py  emoji.py  hue.py  icons.py  media.py  metrics.py  mpris.py  notch.py  notifications.py  overview.py  pins.py  player.py  power.py  private_data.py  systemtray.py  tools.py  updater.py  wallpapers.py  weather.py  widgets.py
modules/cavalcade_modules/: cava_drawing.py
modules/dashboard_modules/: buttons.py  widgets.py
scripts/: ocr.sh  screenrecord.sh  screenshot.sh
services/: brightness.py
styles/: ai.css  buttons.css  controls.css  csgsugar.css  dashboard.css  hue.css  media.css  notch.css  shadows.css  widgets.css
utils/: rgbxy.py
