[project]
name = "ax-shell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dbus-python",
  "fabric",
  "ijson>=3.4.0",
  "numpy>=2.3.0",
  "pillow>=11.2.1",
  "pre-commit>=4.2.0",
  "psutil>=7.0.0",
  "pygobject==3.52.3",
  "pygobject-stubs>=2.13.0",
  "python-hue-v2",
  "pywayland>=0.4.18",
  "requests>=2.32.3",
  "ruff>=0.11.13",
  "setproctitle>=1.3.6",
  "sphinx>=8.2.3",
  "toml>=0.10.2",
  "watchdog>=6.0.0",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric" }
python-hue-v2 = { git = "https://github.com/FengChendian/python-hue-v2" }

[tool.basedpyright]
reportMissingTypeStubs = true
reportAttributeAccessIssue = false
reportUnreachable = false
typeCheckingMode = "basic"
